--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run the container 
-      run: docker build -f Dockerfile -t tikal-yahav:1.0.0 .
+      run: |
+        docker build -f Dockerfile -t tikal-yahav:1.0.0 .
+        docker run --name tikal-test -d -p 8080:8080 tikal-yahav:1.0.0
     
       # run: docker run --name tikal-test -d -p 8080:8080 tikal-yahav:1.0.0
