--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,9 +8,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run the container 
+    - name: Build docker image & Run the container.
       run: |
         docker build -f Dockerfile -t tikal-yahav:1.0.0 .
         docker run --name tikal-test -d -p 8080:8080 tikal-yahav:1.0.0
     
-      # run: docker run --name tikal-test -d -p 8080:8080 tikal-yahav:1.0.0
