--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,9 +11,14 @@ jobs:
     - name: Build docker image & Run the container.
       run: |
         docker build -f Dockerfile -t tikal-yahav:1.0.0 .
-        docker run --name tikal-test -d -p 8080:8080 tikal-yahav:1.0.0
-        # Test the container ip and hostname.
-        docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' tikal-test
-        docker inspect -f '{{ .Config.Hostname }}' tikal-test 
-        
+
+  run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: run docker image
+        run: |
+          docker run --name tikal-test -d -p 8080:8080 tikal-yahav:1.0.0
+          # Test the container ip and hostname.
+          docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' tikal-test
+          docker inspect -f '{{ .Config.Hostname }}' tikal-test 
     
