--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,13 +14,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build docker image.
       run: |
-
+        docker build -f Dockerfile -t yahav876/tikal-yahav:1.0.0 .
         docker login --username="${USER}" --password="${PASSWD}"
-        docker build -f Dockerfile -t tikal-yahav:1.0.0 .
-        docker push tikal-yahav:1.0.0
+        docker push yahav876/tikal-yahav:1.0.0
         
-
-  
   run:
     needs: build
     runs-on: ubuntu-latest
